--- a/colobate-main/server/.env
+++ b/colobate-main/server/.env
@@ -2,6 +2,7 @@
 DB_HOST=auth-db1247.hstgr.io
 DB_NAME=u221056473_collibate_lp
 DB_USER=u221056473_collibate_dba
-DB_PASSWORD=uP^R#8cB8
+# Password contains special chars (e.g. #). Wrap in quotes so dotenv reads full value.
+DB_PASSWORD="uP^R#8cB8"
 
 PORT=5000
