--- a/colobate-main/server/.env
+++ b/colobate-main/server/.env
@@ -6,3 +6,6 @@ DB_USER=u221056473_collibate_dba
 DB_PASSWORD="uP^R#8cB8"
 
 PORT=5000
+
+# Secret used to sign admin JWTs. Replace with a long random string in production.
+ADMIN_JWT_SECRET="replace-with-a-strong-secret"
